--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
         build:
             context: .
             dockerfile: './backend/Dockerfile.dev'
+        environment:
+            - DB_HOST=db-mysql
+        depends_on: 
+            - db-mysql
         volumes:
             - ./data/backend/logs:/usr/src/app/logs
             - ./backend/src/:/usr/src/app/src
